revert usxarray to install from conda. remove pip and vim.

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: mpas-jedi-cookbook
+name: mpas-jedi-cookbook-dev
 channels:
   - conda-forge
 dependencies:
@@ -14,14 +14,10 @@ dependencies:
   - matplotlib
   - mystmd
   - netCDF4
-  - pip
   - plotly
   - s3fs
   - scipy
   - seaborn
   - nbclean
-  # - uxarray  # for now until releasing vertical cross-sections
+  - uxarray
   - xarray
-  - vim
-  - pip:
-    - git+https://github.com/UXARRAY/uxarray@interpolate-cross-section  # remove when you revert uxarray above!
